Add release lock sync tooling, ledger Tailwind build, and new blogs.
Keep version.rb and Gemfile.lock aligned for CI frozen installs, build
tailwind.css during galaaz add ledger, and ship galaaz_2_0 plus
r_on_rails_ledger blog sources with refreshed knit outputs.

Co-authored-by: Cursor <cursoragent@cursor.com>